# captioner

./: .gitignore  README.md  caption_generator.py  captioner.py  enums.py  image.py  pyproject.toml  regenerate_ui.sh  requirements.txt  run.py  utils.py
.github/workflows/: build.yml
captioner/: __init__.py  caption_generator.py  constants.py  enums.py  main_window.py  thread.py  utils.py
captioner/ui/: main_window.ui  ui_mainwindow.py
captioner/widgets/: direction_picker.py
packaging/: captioner.desktop
packaging/arch/: PKGBUILD
packaging/arch-git/: PKGBUILD
ui/: main_window.ui  main_window_ui.py  ui_mainwindow.py
widgets/: __init__.py  color_picker.py  direction_picker.py
