[tool.poetry]
name = "captioner"
version = "1.1.1"
description = "A FOSS GUI program to caption/manip images using plain text or markdown."
authors = ["Matthieu LAURENT <matthieu.laurent69@proton.me>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.scripts]
captioner = "captioner:run"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
PySide6 = "^6.5.2"
Pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
